--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <header>
         <div class="app-name">
             <a href="">
+                <img src="./image/logo.jpg" alt="">
                 <h1>Furniture eCommerce</h1>
             </a>
         </div>
@@ -42,6 +43,11 @@
             </div>
             <div class="image-slide">
                 <img src="./image/bg-img.jpg" alt="">
+            </div>
+        </section>
+        <section id="product-list">
+            <div class="product-cont">
+                
             </div>
         </section>
     </main>
