--- a/index.html
+++ b/index.html
@@ -55,16 +55,22 @@
                             <div class="prod-img">
 
                             </div>
+                            <h2>Lorem Ipsum</h2>
+                            <p>Lorem ipsum dolor sit amet</p>
                         </div>
                         <div class="prod-content">
                             <div class="prod-img">
                                 
                             </div>
+                            <h2>Lorem Ipsum</h2>
+                            <p>Lorem ipsum dolor sit amet</p>
                         </div>
                         <div class="prod-content">
                             <div class="prod-img">
                                 
                             </div>
+                            <h2>Lorem Ipsum</h2>
+                            <p>Lorem ipsum dolor sit amet</p>
                         </div>
                     </div>
                     <!--<div class="prod-child">
