--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
                 </div>
             </div>
         </section>
+        <section id="contact">
+            <div class="profile">
+
+            </div>
+            <div class="contact-form">
+                
+            </div>
+        </section>
     </main>
 </body>
 </html>
