--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <!--Put your navigation here below-->
         <nav>
-            <a href="">Login</a>
+            <a href="./src/sys-admin/login-page/adminLogin.html">Login</a>
             <a href="">Signup</a>
         </nav>
     </header>
