--- a/src/sys-admin/login-page/adminLogin.html
+++ b/src/sys-admin/login-page/adminLogin.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="src/style/style.css">
+    <link rel="stylesheet" href=".../style/style.css">
 </head>
 <body>
     <!--Header and divider-->
@@ -25,9 +25,5 @@
             <a href="">Signup</a>
         </nav>
     </header>
-    <div class="divider">
-        <p>Wood Furniture Design Customization and Ordering System</p>
-    </div>
-    <!------------------------------------------------>
 </body>
 </html>
