--- a/index.html
+++ b/index.html
@@ -84,7 +84,21 @@
         </section>
         <section id="contact">
             <div class="profile">
+                <div class="prof-cont">
+                    <img src="./image/icon/account.png" alt="">
+                    <br>
+                    <h1>Lorem Ipsum</h1>
+                    <p>Shop Owner</p>
 
+                    <div class="location">
+                        <p><img src="./image/icon/phone.png" alt="">&nbsp09123456789</p>
+                        <p class="loc"><img src="./image/icon/gps.png" alt="">&nbspBrgy. Mahayahay, Lemery, Batangas</p>
+                    </div>
+                    <div class="google-map">
+                        <img src="./image/map.png" alt="">
+                    </div>
+                    
+                </div>
             </div>
             <div class="contact-form">
                 
