--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h1>Lorem Ipsum Shop</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, dolore cumque optio eum facilis tenetur ipsam voluptates enim mollitia aut, iure illum odit dolor suscipit perferendis saepe, repudiandae accusamus dolores.</p>
                 <div>
-                    <button>PRODUCT</button>
+                    <button onclick="window.location.href='#product-list'">PRODUCT</button>
                     <button>LOGIN</button>
                 </div>
             </div>
