--- a/index.html
+++ b/index.html
@@ -101,7 +101,35 @@
                 </div>
             </div>
             <div class="contact-form">
-                
+                <div class="contact-cont">
+                    <h1>Contact Us</h1>
+                    <p>Let's get this conversation started. Tell us a bit about yourself, and we'll get in touch as soon as we can.</p>
+                    <form action="">
+                        <div class="form-inputs">
+                            <div class="input">
+                                <label for="name">Name</label>
+                                <input type="text" name="name" id="name" placeholder="Name">
+                            </div>
+                            <div class="input">
+                                <label for="email">Email</label>
+                                <input type="email" name="email" id="email" placeholder="Email">
+                            </div>
+                            <div class="input">
+                                <label for="number">Phone Number</label>
+                                <input type="text" name="number" id="number" placeholder="Phone Number">
+                            </div>
+                            <div class="input">
+                                <label for="message">Message</label>
+                                <textarea name="message" id="" cols="30" rows="10" placeholder="Write your message here..."></textarea>
+                            </div>
+
+                            <div class="button">
+                                <input class="submit" type="submit" value="Submit">
+                            </div>
+                        </div>
+
+                    </form>
+                </div>
             </div>
         </section>
     </main>
