UserLogin Page Update

--- a/index.html
+++ b/index.html
@@ -73,12 +73,7 @@
                             <p>Lorem ipsum dolor sit amet</p>
                         </div>
                     </div>
-                    <!--<div class="prod-child">
-
-                    </div>
-                    <div class="prod-child">
-
-                    </div>-->
+                    <button title="See more"><img src="./image/icon/more.png" alt=""></button>
                 </div>
             </div>
         </section>
