--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!--Put your navigation here below-->
         <nav>
             <a href="./src/sys-user/login-page/userlogin.php">Login</a>
-            <a href="">Signup</a>
+            <a href="./src/sys-user/signup-page/signup-page.php">Signup</a>
         </nav>
     </header>
     <div class="divider">
@@ -38,7 +38,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, dolore cumque optio eum facilis tenetur ipsam voluptates enim mollitia aut, iure illum odit dolor suscipit perferendis saepe, repudiandae accusamus dolores.</p>
                 <div>
                     <button onclick="window.location.href='#product-list'">PRODUCT</button>
-                    <button>LOGIN</button>
+                    <button onclick="window.location.href='./src/sys-user/login-page/userlogin.php'">LOGIN</button>
                 </div>
             </div>
             <div class="image-slide">
